添加二叉排序树

--- a/src/sample/GraphViz/setting.properties
+++ b/src/sample/GraphViz/setting.properties
@@ -1,7 +1,7 @@
 #change  properties
-#Sun May 05 16:22:58 CST 2019
-linecolor=lightblue
-nodecolor=yellow
-nodeshape=4
-nodestyle=rounded
-linehead=both
+#Mon May 06 12:42:00 CST 2019
+linecolor=black
+nodeshape=33
+nodecolor=lightblue
+nodestyle=filled
+linehead=none
