添加线索二叉树

--- a/src/sample/GraphViz/setting.properties
+++ b/src/sample/GraphViz/setting.properties
@@ -1,7 +1,7 @@
 #change  properties
-#Mon May 06 12:42:00 CST 2019
-linecolor=black
+#Tue May 07 10:27:49 CST 2019
+linecolor=red
+nodecolor=red
 nodeshape=33
-nodecolor=lightblue
-nodestyle=filled
-linehead=none
+nodestyle=rounded
+linehead=both
