--- a/src/sample/GraphViz/setting.properties
+++ b/src/sample/GraphViz/setting.properties
@@ -1,7 +1,7 @@
 #change  properties
-#Tue May 07 10:27:49 CST 2019
-linecolor=red
-nodecolor=red
+#Fri May 10 14:04:53 CST 2019
+linecolor=black
+nodecolor=black
 nodeshape=33
 nodestyle=rounded
-linehead=both
+linehead=none
