--- a/src/sample/GraphViz/setting.properties
+++ b/src/sample/GraphViz/setting.properties
@@ -1,7 +1,7 @@
 #change  properties
-#Fri May 10 14:04:53 CST 2019
-linecolor=black
-nodecolor=black
-nodeshape=33
+#Thu May 16 11:47:48 CST 2019
+linecolor=yellow
+nodeshape=5
+nodecolor=green
 nodestyle=rounded
-linehead=none
+linehead=forward
