修改B-/B+树界面

--- a/src/sample/GraphViz/setting.properties
+++ b/src/sample/GraphViz/setting.properties
@@ -1,7 +1,7 @@
 #change  properties
-#Thu May 16 11:47:48 CST 2019
-linecolor=yellow
-nodeshape=5
-nodecolor=green
+#Thu May 16 12:15:25 CST 2019
+linecolor=black
+nodecolor=black
+nodeshape=33
 nodestyle=rounded
-linehead=forward
+linehead=none
