--- a/src/sample/GraphViz/setting.properties
+++ b/src/sample/GraphViz/setting.properties
@@ -1,7 +1,7 @@
 #change  properties
-#Thu May 16 12:15:25 CST 2019
+#Sat May 18 12:32:55 CST 2019
 linecolor=black
-nodecolor=black
 nodeshape=33
+nodecolor=red
 nodestyle=rounded
 linehead=none
