添加喷漆机器人

--- a/src/sample/GraphViz/setting.properties
+++ b/src/sample/GraphViz/setting.properties
@@ -1,7 +1,7 @@
 #change  properties
-#Sat May 18 12:32:55 CST 2019
-linecolor=black
+#Tue May 21 17:51:16 CST 2019
+linecolor=yellow
+nodecolor=orange
 nodeshape=33
-nodecolor=red
 nodestyle=rounded
 linehead=none
