实现喷漆机器人

--- a/src/sample/GraphViz/setting.properties
+++ b/src/sample/GraphViz/setting.properties
@@ -1,7 +1,7 @@
 #change  properties
-#Tue May 21 17:51:16 CST 2019
-linecolor=yellow
-nodecolor=orange
+#Sun Jun 02 11:06:14 CST 2019
+linecolor=black
 nodeshape=33
+nodecolor=black
 nodestyle=rounded
 linehead=none
